syntax = "proto3";

package product;

service ProductService {
    rpc GetProductInfoByProductId(GetProductInfoByProductIdRequest) returns (Product) {}
}

message Product {
    int32 id = 1;
    string name = 2;
}

message GetProductInfoByProductIdRequest {
    int32 productId = 1;
}